--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,8 @@ android {
 }
 ext{
     okhttp_version = "4.2.1"
+    google_play_location_version = "17.0.0"
+    google_play_awareness_version = "17.1.0"
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -34,6 +36,11 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // google play services
+    implementation "com.google.android.gms:play-services-location:${google_play_location_version}"
+    implementation "com.google.android.gms:play-services-awareness:${google_play_awareness_version}"
+
+    // okhttp libs
     implementation "com.squareup.okhttp3:okhttp:${okhttp_version}"
     testImplementation "com.squareup.okhttp3:mockwebserver:${okhttp_version}"
 }
