--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,16 +22,17 @@ android {
 ext{
     okhttp_version = "4.2.1"
     google_play_location_version = "17.0.0"
-    google_play_awareness_version = "17.1.0"
+    google_play_awareness_version = "18.0.0"
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.2.0-alpha01'
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation("com.squareup.okhttp3:okhttp:4.5.0")
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
