--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     // okhttp libs
     implementation "com.squareup.okhttp3:okhttp:${okhttp_version}"
     testImplementation "com.squareup.okhttp3:mockwebserver:${okhttp_version}"
+    implementation 'androidx.fragment:fragment-ktx:1.0.0'
 }
