--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation("com.squareup.okhttp3:okhttp:4.5.0")
     testImplementation 'junit:junit:4.13'
@@ -44,5 +47,5 @@ dependencies {
     // okhttp libs
     implementation "com.squareup.okhttp3:okhttp:${okhttp_version}"
     testImplementation "com.squareup.okhttp3:mockwebserver:${okhttp_version}"
-    implementation 'androidx.fragment:fragment-ktx:1.0.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.4'
 }
